Fix overflow

--- a/master.css
+++ b/master.css
@@ -138,6 +138,8 @@ footer p{
     background-color: #fff;
     padding: 1.5rem;
     position: absolute;
+    max-height: 100%;
+    overflow: auto;
     bottom: 0;
     right: 0;
     left: 0;
